--- a/TextureAtlas/TextureAtlas.vcxproj
+++ b/TextureAtlas/TextureAtlas.vcxproj
@@ -46,8 +46,8 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>$(ProjectDir)\..\..\;$(IncludePath)</IncludePath>
-    <LibraryPath>$(ProjectDir)\..\..\lib\;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(ProjectDir)\..\build\;$(IncludePath)</IncludePath>
+    <LibraryPath>$(ProjectDir)\..\build\lib\;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
