共通部分削除 ライブラリ更新

--- a/LightPropagationVolume/LightPropagationVolume.vcxproj.filters
+++ b/LightPropagationVolume/LightPropagationVolume.vcxproj.filters
@@ -33,12 +33,6 @@
     <ClInclude Include="src\render\CascadedShadowMap.h">
       <Filter>src\render</Filter>
     </ClInclude>
-    <ClInclude Include="src\render\DebugDraw.h">
-      <Filter>src\render</Filter>
-    </ClInclude>
-    <ClInclude Include="src\render\Glare.h">
-      <Filter>src\render</Filter>
-    </ClInclude>
     <ClInclude Include="src\render\InputLayoutFactory.h">
       <Filter>src\render</Filter>
     </ClInclude>
@@ -56,9 +50,6 @@
     </ClInclude>
     <ClInclude Include="src\render\ShaderType.h">
       <Filter>src\render</Filter>
-    </ClInclude>
-    <ClInclude Include="src\load\ModelLoader.h">
-      <Filter>src\load</Filter>
     </ClInclude>
     <ClInclude Include="..\Common\font\FontPack.h">
       <Filter>src\font</Filter>
@@ -132,6 +123,15 @@
     <ClInclude Include="src\render\ReflectiveShadowMap.h">
       <Filter>src\render</Filter>
     </ClInclude>
+    <ClInclude Include="..\Common\load\ModelLoader.h">
+      <Filter>src\load</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Common\render\Glare.h">
+      <Filter>src\render</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Common\render\DebugDraw.h">
+      <Filter>src\render</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Application.cpp">
@@ -146,13 +146,7 @@
     <ClCompile Include="src\scene\DebugCamera.cpp">
       <Filter>src\scene</Filter>
     </ClCompile>
-    <ClCompile Include="src\render\Glare.cpp">
-      <Filter>src\render</Filter>
-    </ClCompile>
     <ClCompile Include="src\render\CascadedShadowMap.cpp">
-      <Filter>src\render</Filter>
-    </ClCompile>
-    <ClCompile Include="src\render\DebugDraw.cpp">
       <Filter>src\render</Filter>
     </ClCompile>
     <ClCompile Include="src\render\InputLayoutFactory.cpp">
@@ -172,9 +166,6 @@
     </ClCompile>
     <ClCompile Include="src\render\ShaderType.cpp">
       <Filter>src\render</Filter>
-    </ClCompile>
-    <ClCompile Include="src\load\ModelLoader.cpp">
-      <Filter>src\load</Filter>
     </ClCompile>
     <ClCompile Include="..\Common\font\FontManager.cpp">
       <Filter>src\font</Filter>
@@ -219,6 +210,15 @@
       <Filter>src\render</Filter>
     </ClCompile>
     <ClCompile Include="src\render\ReflectiveShadowMap.cpp">
+      <Filter>src\render</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Common\load\ModelLoader.cpp">
+      <Filter>src\load</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Common\render\Glare.cpp">
+      <Filter>src\render</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Common\render\DebugDraw.cpp">
       <Filter>src\render</Filter>
     </ClCompile>
   </ItemGroup>
