--- a/LightPropagationVolume/LightPropagationVolume.vcxproj
+++ b/LightPropagationVolume/LightPropagationVolume.vcxproj
@@ -57,11 +57,12 @@
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;LIME_DX11;LMATH_USE_SSE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
+      <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>lframework_dx11_sse_vc110_d.lib;linput_vc110_d.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>lframework_dx11_sse_vc110_d.lib;linput_vc110_d.lib;d3dcompiler.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -74,13 +75,14 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;LIME_DX11;LMATH_USE_SSE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
+      <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>lframework_dx11_sse_vc110.lib;linput_vc110.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>lframework_dx11_sse_vc110.lib;linput_vc110.lib;d3dcompiler.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -95,8 +97,11 @@
     <ClInclude Include="..\Common\load\load_mesh.h" />
     <ClInclude Include="..\Common\load\load_node.h" />
     <ClInclude Include="..\Common\load\load_texture.h" />
+    <ClInclude Include="..\Common\load\ModelLoader.h" />
     <ClInclude Include="..\Common\render\AnimObject.h" />
+    <ClInclude Include="..\Common\render\DebugDraw.h" />
     <ClInclude Include="..\Common\render\Geometry.h" />
+    <ClInclude Include="..\Common\render\Glare.h" />
     <ClInclude Include="..\Common\render\Material.h" />
     <ClInclude Include="..\Common\render\Mesh.h" />
     <ClInclude Include="..\Common\render\Node.h" />
@@ -106,10 +111,7 @@
     <ClInclude Include="..\Common\stdafx.h" />
     <ClInclude Include="..\Common\Timer.h" />
     <ClInclude Include="src\Application.h" />
-    <ClInclude Include="src\load\ModelLoader.h" />
     <ClInclude Include="src\render\CascadedShadowMap.h" />
-    <ClInclude Include="src\render\DebugDraw.h" />
-    <ClInclude Include="src\render\Glare.h" />
     <ClInclude Include="src\render\InputLayoutFactory.h" />
     <ClInclude Include="src\render\LightPropagationVolume.h" />
     <ClInclude Include="src\render\LPVBuffer.h" />
@@ -128,8 +130,11 @@
     <ClCompile Include="..\Common\font\FontPack.cpp" />
     <ClCompile Include="..\Common\font\FontShader.cpp" />
     <ClCompile Include="..\Common\Input.cpp" />
+    <ClCompile Include="..\Common\load\ModelLoader.cpp" />
     <ClCompile Include="..\Common\render\AnimObject.cpp" />
+    <ClCompile Include="..\Common\render\DebugDraw.cpp" />
     <ClCompile Include="..\Common\render\Geometry.cpp" />
+    <ClCompile Include="..\Common\render\Glare.cpp" />
     <ClCompile Include="..\Common\render\Material.cpp" />
     <ClCompile Include="..\Common\render\Mesh.cpp" />
     <ClCompile Include="..\Common\render\Node.cpp" />
@@ -137,11 +142,8 @@
     <ClCompile Include="..\Common\stdafx.cpp" />
     <ClCompile Include="..\Common\Timer.cpp" />
     <ClCompile Include="src\Application.cpp" />
-    <ClCompile Include="src\load\ModelLoader.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\render\CascadedShadowMap.cpp" />
-    <ClCompile Include="src\render\DebugDraw.cpp" />
-    <ClCompile Include="src\render\Glare.cpp" />
     <ClCompile Include="src\render\InputLayoutFactory.cpp" />
     <ClCompile Include="src\render\LightPropagationVolume.cpp" />
     <ClCompile Include="src\render\LPVBuffer.cpp" />
