--- a/Ocean/Ocean.vcxproj.filters
+++ b/Ocean/Ocean.vcxproj.filters
@@ -10,14 +10,8 @@
     <ClCompile Include="src\System.cpp">
       <Filter>src</Filter>
     </ClCompile>
-    <ClCompile Include="src\load\ModelLoader.cpp">
-      <Filter>src\load</Filter>
-    </ClCompile>
     <ClCompile Include="src\scene\DebugCamera.cpp">
       <Filter>src\scene</Filter>
-    </ClCompile>
-    <ClCompile Include="src\render\DebugDraw.cpp">
-      <Filter>src\render</Filter>
     </ClCompile>
     <ClCompile Include="src\render\InputLayoutFactory.cpp">
       <Filter>src\render</Filter>
@@ -29,9 +23,6 @@
       <Filter>src\render</Filter>
     </ClCompile>
     <ClCompile Include="src\render\Renderer.cpp">
-      <Filter>src\render</Filter>
-    </ClCompile>
-    <ClCompile Include="src\render\Rectangle.cpp">
       <Filter>src\render</Filter>
     </ClCompile>
     <ClCompile Include="src\render\ShaderType.cpp">
@@ -48,9 +39,6 @@
     </ClCompile>
     <ClCompile Include="src\scene\SkyBox.cpp">
       <Filter>src\scene</Filter>
-    </ClCompile>
-    <ClCompile Include="src\render\Glare.cpp">
-      <Filter>src\render</Filter>
     </ClCompile>
     <ClCompile Include="src\scene\Airplane.cpp">
       <Filter>src\scene</Filter>
@@ -91,6 +79,18 @@
     <ClCompile Include="..\Common\Timer.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="..\Common\render\DebugDraw.cpp">
+      <Filter>src\render</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Common\render\Glare.cpp">
+      <Filter>src\render</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Common\render\Rectangle.cpp">
+      <Filter>src\render</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Common\load\ModelLoader.cpp">
+      <Filter>src\load</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Application.h">
@@ -99,14 +99,8 @@
     <ClInclude Include="src\System.h">
       <Filter>src</Filter>
     </ClInclude>
-    <ClInclude Include="src\load\ModelLoader.h">
-      <Filter>src\load</Filter>
-    </ClInclude>
     <ClInclude Include="src\scene\DebugCamera.h">
       <Filter>src\scene</Filter>
-    </ClInclude>
-    <ClInclude Include="src\render\DebugDraw.h">
-      <Filter>src\render</Filter>
     </ClInclude>
     <ClInclude Include="src\render\InputLayoutFactory.h">
       <Filter>src\render</Filter>
@@ -124,9 +118,6 @@
       <Filter>src\render</Filter>
     </ClInclude>
     <ClInclude Include="src\render\render.h">
-      <Filter>src\render</Filter>
-    </ClInclude>
-    <ClInclude Include="src\render\Rectangle.h">
       <Filter>src\render</Filter>
     </ClInclude>
     <ClInclude Include="src\render\ShaderType.h">
@@ -149,9 +140,6 @@
     </ClInclude>
     <ClInclude Include="src\scene\SkyBox.h">
       <Filter>src\scene</Filter>
-    </ClInclude>
-    <ClInclude Include="src\render\Glare.h">
-      <Filter>src\render</Filter>
     </ClInclude>
     <ClInclude Include="src\scene\Airplane.h">
       <Filter>src\scene</Filter>
@@ -221,6 +209,18 @@
     </ClInclude>
     <ClInclude Include="..\Common\render\ShaderBase.h">
       <Filter>src\render</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Common\render\Rectangle.h">
+      <Filter>src\render</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Common\render\DebugDraw.h">
+      <Filter>src\render</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Common\render\Glare.h">
+      <Filter>src\render</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Common\load\ModelLoader.h">
+      <Filter>src\load</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
