--- a/Cascade/Cascade.vcxproj.filters
+++ b/Cascade/Cascade.vcxproj.filters
@@ -64,9 +64,6 @@
     <ClCompile Include="src\render\CascadedShadowMap.cpp">
       <Filter>src\render</Filter>
     </ClCompile>
-    <ClCompile Include="src\render\Voxel.cpp">
-      <Filter>src\render</Filter>
-    </ClCompile>
     <ClCompile Include="src\Noise.cpp">
       <Filter>src</Filter>
     </ClCompile>
@@ -80,9 +77,6 @@
       <Filter>src\render</Filter>
     </ClCompile>
     <ClCompile Include="..\Common\render\Rectangle.cpp">
-      <Filter>src\render</Filter>
-    </ClCompile>
-    <ClCompile Include="src\render\ShadowMap.cpp">
       <Filter>src\render</Filter>
     </ClCompile>
     <ClCompile Include="src\render\ShaderManager.cpp">
@@ -183,9 +177,6 @@
     <ClInclude Include="..\Common\render\ShaderBase.h">
       <Filter>src\render</Filter>
     </ClInclude>
-    <ClInclude Include="src\render\Voxel.h">
-      <Filter>src\render</Filter>
-    </ClInclude>
     <ClInclude Include="src\Noise.h">
       <Filter>src</Filter>
     </ClInclude>
@@ -199,9 +190,6 @@
       <Filter>src\render</Filter>
     </ClInclude>
     <ClInclude Include="..\Common\render\Rectangle.h">
-      <Filter>src\render</Filter>
-    </ClInclude>
-    <ClInclude Include="src\render\ShadowMap.h">
       <Filter>src\render</Filter>
     </ClInclude>
     <ClInclude Include="src\render\ShaderManager.h">
@@ -224,5 +212,37 @@
     <Filter Include="src\font">
       <UniqueIdentifier>{835c7959-2385-4e7c-a4c7-e6b74f525272}</UniqueIdentifier>
     </Filter>
+    <Filter Include="src\render\shader">
+      <UniqueIdentifier>{904c6eda-0651-4d96-b487-7f7b20f5de35}</UniqueIdentifier>
+    </Filter>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="src\render\shader\Depth.ps">
+      <Filter>src\render\shader</Filter>
+    </None>
+    <None Include="src\render\shader\Depth.gs">
+      <Filter>src\render\shader</Filter>
+    </None>
+    <None Include="src\render\shader\Depth.vs">
+      <Filter>src\render\shader</Filter>
+    </None>
+    <None Include="src\render\shader\Default.ps">
+      <Filter>src\render\shader</Filter>
+    </None>
+    <None Include="src\render\shader\DefaultTexture.ps">
+      <Filter>src\render\shader</Filter>
+    </None>
+    <None Include="src\render\shader\DefaultPNU.vs">
+      <Filter>src\render\shader</Filter>
+    </None>
+    <None Include="src\render\shader\DefaultPN.vs">
+      <Filter>src\render\shader</Filter>
+    </None>
+    <None Include="src\render\shader\HDAO.ps">
+      <Filter>src\render\shader</Filter>
+    </None>
+    <None Include="src\render\shader\FullQuad.vs">
+      <Filter>src\render\shader</Filter>
+    </None>
   </ItemGroup>
 </Project>
